kubernetes/resources/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opa-kubernetes-client
  labels:
    app: opa-kubernetes-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa-kubernetes-client
  template:
    metadata:
      name: opa-kubernetes-client
      labels:
        app: opa-kubernetes-client
    spec:
      containers:
        - name: opa
          image: openpolicyagent/opa:edge-debug
          args: [
            "run",
            "--server",
            "--ignore=.*",
            "--addr=:8181",
            "--log-level=info",
            "/policy"
          ]
          ports:
            - containerPort: 8181
          livenessProbe:
            httpGet:
              path: /health
              port: 8181
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 8181
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 5
          volumeMounts:
          - name: policy
            mountPath: /policy
      volumes:
        - name: policy
          configMap:
            name: opa-kubernetes-client
---
kind: Service
apiVersion: v1
metadata:
  name: opa-kubernetes-client
spec:
  selector:
    app: opa-kubernetes-client
  ports:
  - port: 8181
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opa-kubernetes-client
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opa-kubernetes-client
            port:
              number: 8181
